Update workflow to include mvn package

--- a/hc-auth-api/Dockerfile
+++ b/hc-auth-api/Dockerfile
@@ -5,7 +5,7 @@ USER spring:spring
 
 WORKDIR /app
 
-COPY target/hc-auth-api-1.0.0-SNAPSHOT.jar app.jar
+COPY target/hc-auth-api.jar app.jar
 
 EXPOSE 8080
 
