--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Verify with Maven
+      - name: Maven Verify
         run: mvn --batch-mode --update-snapshots verify
+      - name: Maven Package
+        run: mvn --batch-mode package
+      - name: Inspect hc-auth-api/target
+        run: ls -lart hc-auth-api/target
       #- name: Build with Maven
       #  run: mvn -B package --file pom.xml
 
