--- a/hc-auth-api/pom.xml
+++ b/hc-auth-api/pom.xml
@@ -44,6 +44,36 @@
       </plugin>
 
       <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+        <version>1.4.6</version>
+        <dependencies>
+          <dependency>
+            <groupId>com.github.jnr</groupId>
+            <artifactId>jnr-unixsocket</artifactId>
+            <version>0.38.23</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <phase>install</phase>
+            <id>default</id>
+            <goals>
+              <goal>build</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <!--
+          <dockerfile>${project.basedir}/Dockerfile</dockerfile>
+          <contextDirectory>${project.basedir}</contextDirectory>
+          -->
+          <tag>${project.version}</tag>
+          <repository>${artifactId}</repository>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
         <executions>
