--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,9 @@ jobs:
 
       - name: Build docker image (main)
         if: github.ref == 'refs/heads/main'
-        run: mvn --batch-mode install
+        run: |
+          mvn --batch-mode install
+          docker images
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       #- name: Update dependency graph
