--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Inspect hc-auth-api
         run: ls -lart hc-auth-api
 
+      - name: Inspect hc-spring-lib
+        run: ls -lart hc-spring-lib
+
       - name: Login to GitHub Container registry
         uses: docker/login-action@v3
         with:
