--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -47,15 +47,30 @@ jobs:
       - name: Inspect hc-auth-api/target
         run: ls -lart hc-auth-api/target
 
+      - name: Upload maven target
+        uses: actions/upload-artifact@v4
+        with:
+          name: maven-target
+          path: hc-auth-api/target/
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       #- name: Update dependency graph
       #  uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
   docker:
+    if: ${{ github.ref == 'refs/heads/main' }}
+
     runs-on: ubuntu-latest
     needs: maven
     steps:
+      - name: Checkout GitHub repo
+        uses: actions/checkout@v4
+
+      - name: Download maven target
+        uses: actions/download-artifact@v4
+        with:
+          name: maven-target
+
       - name: Inspect working directory
         run: |
           echo "Working directory..."
@@ -64,3 +79,6 @@ jobs:
 
       - name: List target dirs
         run: find . -type d -name "target"
+
+      - name: Inspect hc-auth-api/target
+        run: ls -lart hc-auth-api/target
