--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -48,6 +48,7 @@ jobs:
         run: ls -lart hc-auth-api/target
 
       - name: Upload maven target
+        if: github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
           name: maven-target
@@ -70,6 +71,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: maven-target
+          path: hc-auth-api/target/
 
       - name: Inspect working directory
         run: |
