--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -75,7 +75,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: maven-target
-          path: target/
+          path: hc-auth-api/target/
 
       - name: Inspect working directory
         run: |
