Fix working directory for docker build

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -118,12 +118,10 @@ jobs:
         id: push
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: hc-auth-api
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-        working-directory: hc-auth-api
-
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
