--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -101,6 +101,12 @@ jobs:
       - name: Inspect target
         run: ls -lart target
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to GitHub Container registry
         uses: docker/login-action@v3
         with:
@@ -121,6 +127,7 @@ jobs:
         with:
           context: hc-auth-api
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
