--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -13,7 +13,7 @@ env:
   IMAGE_NAME: hc-auth-api
 
 jobs:
-  maven:
+  verify:
     runs-on: ubuntu-latest
 
     steps:
@@ -53,11 +53,18 @@ jobs:
       - name: Inspect hc-auth-api/target
         run: ls -lart hc-auth-api/target
 
-      - name: Upload maven target
+      - name: Upload hc-spring-lib target
         if: github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
-          name: maven-target
+          name: hc-spring-lib-target
+          path: hc-spring-lib/target/
+
+      - name: Upload hc-auth-api target
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v4
+        with:
+          name: hc-auth-api-target
           path: hc-auth-api/target/
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
@@ -68,7 +75,7 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main' }}
 
     runs-on: ubuntu-latest
-    needs: maven
+    needs: verify
     defaults:
       run:
         working-directory: hc-auth-api
@@ -86,7 +93,7 @@ jobs:
       - name: Download maven target
         uses: actions/download-artifact@v4
         with:
-          name: maven-target
+          name: hc-auth-api-target
           path: hc-auth-api/target/
 
       - name: Inspect working directory
@@ -137,3 +144,38 @@ jobs:
           subject-name: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.IMAGE_NAME }}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
+
+  maven:
+    if: ${{ github.ref == 'refs/heads/main' }}
+
+    runs-on: ubuntu-latest
+    needs: verify
+    defaults:
+      run:
+        working-directory: hc-spring-lib
+
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout GitHub repo
+        uses: actions/checkout@v4
+
+      - name: Download maven target
+        uses: actions/download-artifact@v4
+        with:
+          name: hc-spring-lib-target
+          path: hc-spring-lib/target/
+
+      - name: Inspect working directory
+        run: |
+          echo "Working directory..."
+          pwd
+          ls -lart
+
+      - name: List target dirs
+        run: find . -type d -name "target"
+
+      - name: Inspect target
+        run: ls -lart target
