--- a/hc-spring-lib/pom.xml
+++ b/hc-spring-lib/pom.xml
@@ -11,6 +11,22 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/${github.repository_owner}/hc-spring-monorepo</url>
+    </repository>
+  </distributionManagement>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/${github.repository_owner}/hc-spring-monorepo</url>
+    </pluginRepository>
+  </pluginRepositories>
+
+
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -102,6 +118,19 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.2</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>3.1.3</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>deploy</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
     </plugins>
