--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
   <properties>
     <java.version>17</java.version>
+    <github.repository_owner>esasiela</github.repository_owner>
   </properties>
 
   <modules>
