--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -71,7 +71,7 @@ jobs:
       #- name: Update dependency graph
       #  uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
-  docker:
+  docker-build-push:
     if: ${{ github.ref == 'refs/heads/main' }}
 
     runs-on: ubuntu-latest
@@ -145,7 +145,7 @@ jobs:
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
 
-  maven:
+  maven-publish:
     if: ${{ github.ref == 'refs/heads/main' }}
 
     runs-on: ubuntu-latest
@@ -179,3 +179,8 @@ jobs:
 
       - name: Inspect target
         run: ls -lart target
+
+      - name: Publish to GitHub Packages
+        run: mvn --batch-mode deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
