--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -157,11 +157,17 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write
 
     steps:
       - name: Checkout GitHub repo
         uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
       - name: Download maven target
         uses: actions/download-artifact@v4
