--- a/hc-spring-lib/pom.xml
+++ b/hc-spring-lib/pom.xml
@@ -2,14 +2,16 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.w3.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.hedgecourt</groupId>
-    <artifactId>hc-spring-monorepo</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-  </parent>
+
+  <groupId>com.hedgecourt</groupId>
   <artifactId>hc-spring-lib</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <properties>
+    <java.version>17</java.version>
+    <github.repository_owner>esasiela</github.repository_owner>
+  </properties>
 
   <distributionManagement>
     <repository>
