--- a/hc-spring-lib/pom.xml
+++ b/hc-spring-lib/pom.xml
@@ -27,6 +27,13 @@
       <version>5.11.4</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>3.4.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -88,7 +95,7 @@
           <!-- Optional: Set the minimum priority to report issues -->
           <minimumPriority>3</minimumPriority>
           <!-- Output format -->
-          <linkXref>false</linkXref>
+          <linkXRef>false</linkXRef>
           <printFailingErrors>true</printFailingErrors>
           <failOnViolation>true</failOnViolation>
         </configuration>
@@ -132,6 +139,53 @@
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default</id>
+            <goals>
+              <goal>build-info</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <outputFile>
+            ${project.build.outputDirectory}/META-INF/build-info.${project.artifactId}.properties
+          </outputFile>
+          <additionalProperties>
+            <git.commit.id.abbrev>${git.commit.id.abbrev}</git.commit.id.abbrev>
+            <git.commit.id.full>${git.commit.id.full}</git.commit.id.full>
+          </additionalProperties>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>io.github.git-commit-id</groupId>
+        <artifactId>git-commit-id-maven-plugin</artifactId>
+        <version>9.0.1</version>
+        <executions>
+          <execution>
+            <id>get-the-git-infos</id>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+            <phase>initialize</phase>
+          </execution>
+        </executions>
+        <configuration>
+          <generateGitPropertiesFile>false</generateGitPropertiesFile>
+          <generateGitPropertiesFilename>${project.build.outputDirectory}/META-INF/git.properties
+          </generateGitPropertiesFilename>
+          <includeOnlyProperties>
+            <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
+            <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
+          </includeOnlyProperties>
+          <commitIdGenerationMode>full</commitIdGenerationMode>
         </configuration>
       </plugin>
 
