--- a/hc-auth-api/pom.xml
+++ b/hc-auth-api/pom.xml
@@ -47,38 +47,10 @@
             <git.commit.id.full>${git.commit.id.full}</git.commit.id.full>
           </additionalProperties>
 
-          <mainClass>com.hedgecourt.auth.HcAuthApiApplication</mainClass>
+          <mainClass>com.hedgecourt.auth.api.HcAuthApiApplication</mainClass>
           <finalName>${project.artifactId}</finalName>
         </configuration>
       </plugin>
-
-      <!--
-      <plugin>
-        <groupId>com.spotify</groupId>
-        <artifactId>dockerfile-maven-plugin</artifactId>
-        <version>1.4.6</version>
-        <dependencies>
-          <dependency>
-            <groupId>com.github.jnr</groupId>
-            <artifactId>jnr-unixsocket</artifactId>
-            <version>0.38.23</version>
-          </dependency>
-        </dependencies>
-        <executions>
-          <execution>
-            <phase>install</phase>
-            <id>default</id>
-            <goals>
-              <goal>build</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <tag>${project.version}</tag>
-          <repository>${artifactId}</repository>
-        </configuration>
-      </plugin>
-      -->
 
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
