--- a/hc-auth-api/pom.xml
+++ b/hc-auth-api/pom.xml
@@ -2,14 +2,17 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.w3.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.hedgecourt</groupId>
-    <artifactId>hc-spring-monorepo</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-  </parent>
+
+  <groupId>com.hedgecourt</groupId>
   <artifactId>hc-auth-api</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <properties>
+    <java.version>17</java.version>
+    <lombok.version>1.18.36</lombok.version>
+    <spring.boot.version>3.4.0</spring.boot.version>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -17,11 +20,26 @@
       <artifactId>hc-spring-lib</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <version>3.4.0</version>
+      <version>${spring.boot.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <optional>true</optional>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -39,6 +57,14 @@
           </execution>
         </executions>
         <configuration>
+
+          <excludes>
+            <exclude>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+            </exclude>
+          </excludes>
+
           <outputFile>
             ${project.build.outputDirectory}/META-INF/build-info.${project.artifactId}.properties
           </outputFile>
@@ -49,6 +75,26 @@
 
           <mainClass>com.hedgecourt.auth.api.HcAuthApiApplication</mainClass>
           <finalName>${project.artifactId}</finalName>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
+        <configuration>
+          <compilerArgs>-parameters</compilerArgs>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+          </annotationProcessorPaths>
+
         </configuration>
       </plugin>
 
