--- a/hc-spring-lib/pom.xml
+++ b/hc-spring-lib/pom.xml
@@ -10,6 +10,8 @@
 
   <properties>
     <java.version>17</java.version>
+    <spring.boot.version>3.4.0</spring.boot.version>
+    <lombok.version>1.18.36</lombok.version>
     <github.repository_owner>esasiela</github.repository_owner>
   </properties>
 
@@ -31,7 +33,21 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <version>3.4.0</version>
+      <version>${spring.boot.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <optional>true</optional>
     </dependency>
 
   </dependencies>
@@ -135,10 +151,20 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
+        <version>3.13.0</version>
         <configuration>
+          <compilerArgs>-parameters</compilerArgs>
           <source>${java.version}</source>
           <target>${java.version}</target>
+
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+          </annotationProcessorPaths>
+
         </configuration>
       </plugin>
 
@@ -154,6 +180,14 @@
           </execution>
         </executions>
         <configuration>
+
+          <excludes>
+            <exclude>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+            </exclude>
+          </excludes>
+
           <outputFile>
             ${project.build.outputDirectory}/META-INF/build-info.${project.artifactId}.properties
           </outputFile>
@@ -161,6 +195,7 @@
             <git.commit.id.abbrev>${git.commit.id.abbrev}</git.commit.id.abbrev>
             <git.commit.id.full>${git.commit.id.full}</git.commit.id.full>
           </additionalProperties>
+
         </configuration>
       </plugin>
 
