--- a/hc-auth-api/src/main/resources/application.yml
+++ b/hc-auth-api/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
   application:
     name: hc-auth-api
-  security:
-    enabled: false
 
   jackson:
     serialization:
@@ -12,15 +10,23 @@ logging:
   level:
     root: INFO
     com.hedgecourt: DEBUG
-    org.springframework.web: DEBUG
-    org.springframework.web.filter: DEBUG
-    org.springframework.web.servlet.DispatcherServlet: DEBUG
+    org.springframework.web: INFO
+    org.springframework.web.filter: INFO
+    org.springframework.web.servlet.DispatcherServlet: INFO
 
 ---
 spring:
   config:
     activate:
       on-profile: dev
+
+  datasource:
+    url: jdbc:h2:mem:hc_db
+    driverClassName: org.h2.Driver
+    username: hc_user
+    password: devpass123
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
 
 hc:
   env: dev
@@ -31,6 +37,14 @@ spring:
     activate:
       on-profile: test
 
+  datasource:
+    url: jdbc:h2:mem:hc_db
+    driverClassName: org.h2.Driver
+    username: hc_user
+    password: testpass123
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+
 hc:
   env: test
 
@@ -39,6 +53,14 @@ spring:
   config:
     activate:
       on-profile: prod
+
+  datasource:
+    url: jdbc:h2:mem:hc_db
+    driverClassName: org.h2.Driver
+    username: REDACTED
+    password: REDACTED
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
 
 hc:
   env: prod
