--- a/hc-auth-api/pom.xml
+++ b/hc-auth-api/pom.xml
@@ -12,7 +12,11 @@
     <java.version>17</java.version>
     <lombok.version>1.18.36</lombok.version>
     <spring.boot.version>3.4.0</spring.boot.version>
+    <jupiter.version>5.11.4</jupiter.version>
+    <jackson.version>2.18.2</jackson.version>
     <h2.version>2.3.232</h2.version>
+    <jsonwebtoken.version>0.12.6</jsonwebtoken.version>
+    <surefire.version>3.5.2</surefire.version>
   </properties>
 
   <dependencies>
@@ -20,6 +24,13 @@
       <groupId>com.hedgecourt</groupId>
       <artifactId>hc-spring-lib</artifactId>
       <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${jupiter.version}</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -38,6 +49,41 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
       <version>${spring.boot.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <version>${spring.boot.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>${jsonwebtoken.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>${jsonwebtoken.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
+      <version>${jsonwebtoken.version}</version>
     </dependency>
 
     <dependency>
@@ -158,7 +204,8 @@
         <configuration>
           <skip>false</skip>
           <rulesets>
-            <ruleset>/rulesets/java/quickstart.xml</ruleset>
+            <!-- <ruleset>/rulesets/java/quickstart.xml</ruleset> -->
+            <ruleset>src/main/resources/custom-pmd-rules.xml</ruleset>
           </rulesets>
           <excludes>
             <exclude>**/HcAuthApiApplication.java</exclude>
@@ -186,7 +233,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.5.2</version>
+        <version>${surefire.version}</version>
+        <configuration>
+          <systemPropertyVariables>
+            <spring.profiles.active>test</spring.profiles.active>
+          </systemPropertyVariables>
+        </configuration>
       </plugin>
     </plugins>
   </build>
