--- a/hc-spring-lib/pom.xml
+++ b/hc-spring-lib/pom.xml
@@ -10,8 +10,9 @@
 
   <properties>
     <java.version>17</java.version>
-    <spring.boot.version>3.4.0</spring.boot.version>
     <lombok.version>1.18.36</lombok.version>
+    <spring.boot.version>3.4.0</spring.boot.version>
+    <jupiter.version>5.11.4</jupiter.version>
     <github.repository_owner>esasiela</github.repository_owner>
   </properties>
 
@@ -26,7 +27,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.11.4</version>
+      <version>${jupiter.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -41,8 +42,7 @@
       <artifactId>spring-boot-starter-security</artifactId>
       <version>${spring.boot.version}</version>
     </dependency>
-
-
+    
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
