--- a/hc-auth-api/Dockerfile
+++ b/hc-auth-api/Dockerfile
@@ -7,6 +7,8 @@ WORKDIR /app
 
 COPY target/hc-auth-api.jar app.jar
 
+ENV CLASSPATH=/etc/secrets
+
 EXPOSE 8080
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
