Read init database user password from config

--- a/hc-auth-api/src/main/resources/application.yml
+++ b/hc-auth-api/src/main/resources/application.yml
@@ -25,6 +25,9 @@ hc:
       public-key-resource: classpath:jwt/public.pem
       private-key-resource: classpath:jwt/private.pem
 
+    init:
+      password: REDACTED
+
 ---
 spring:
   config:
