--- a/hc-auth-api/pom.xml
+++ b/hc-auth-api/pom.xml
@@ -11,7 +11,8 @@
   <properties>
     <java.version>17</java.version>
     <lombok.version>1.18.36</lombok.version>
-    <spring.boot.version>3.4.0</spring.boot.version>
+    <spring.boot.version>3.3.5</spring.boot.version>
+    <springdoc.version>2.6.0</springdoc.version>
     <jupiter.version>5.11.4</jupiter.version>
     <jackson.version>2.18.2</jackson.version>
     <h2.version>2.3.232</h2.version>
@@ -94,6 +95,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>${springdoc.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>${h2.version}</version>
@@ -108,6 +115,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring.boot.version}</version>
         <executions>
           <execution>
             <goals>
