Expose the JWT verification key PEM via HcPublicEndpoint

--- a/hc-auth-api/src/main/resources/application.yml
+++ b/hc-auth-api/src/main/resources/application.yml
@@ -32,8 +32,9 @@ hc:
     public-key-resource: classpath:jwt/public.pem
     private-key-resource: classpath:jwt/private.pem
 
-  init:
-    password: REDACTED
+  auth:
+    init:
+      password: REDACTED
 
 ---
 spring:
