--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
   <modules>
     <module>hc-spring-lib</module>
+    <module>hc-spring-test</module>
     <module>hc-auth-api</module>
   </modules>
 
