Make github action job for test package need lib package

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -206,7 +206,9 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main' }}
 
     runs-on: ubuntu-latest
-    needs: verify
+    needs:
+      - verify
+      - maven-publish-lib
     defaults:
       run:
         working-directory: hc-spring-test
