--- a/hc-auth-api/pom.xml
+++ b/hc-auth-api/pom.xml
@@ -12,11 +12,14 @@
     <java.version>17</java.version>
     <lombok.version>1.18.36</lombok.version>
     <spring.boot.version>3.3.5</spring.boot.version>
+    <spring.boot.mainClass>com.hedgecourt.auth.api.HcAuthApiApplication</spring.boot.mainClass>
+    <spring.jose.version>6.4.2</spring.jose.version>
     <springdoc.version>2.6.0</springdoc.version>
     <jupiter.version>5.11.4</jupiter.version>
     <jackson.version>2.18.2</jackson.version>
     <h2.version>2.3.232</h2.version>
     <surefire.version>3.5.2</surefire.version>
+    <mockito.version>5.14.2</mockito.version>
   </properties>
 
   <dependencies>
@@ -54,6 +57,18 @@
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-jose</artifactId>
+      <version>${spring.jose.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
       <version>${spring.boot.version}</version>
     </dependency>
@@ -80,14 +95,14 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>5.14.2</version>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
-      <version>5.14.2</version>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -151,7 +166,7 @@
             <git.commit.id.full>${git.commit.id.full}</git.commit.id.full>
           </additionalProperties>
 
-          <mainClass>com.hedgecourt.auth.api.HcAuthApiApplication</mainClass>
+          <mainClass>${spring.boot.mainClass}</mainClass>
           <finalName>${project.artifactId}</finalName>
         </configuration>
       </plugin>
@@ -161,7 +176,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <compilerArgs>-parameters</compilerArgs>
+          <compilerArgs>
+            <arg>-parameters</arg>
+          </compilerArgs>
           <source>${java.version}</source>
           <target>${java.version}</target>
 
