--- a/hc-spring-lib/pom.xml
+++ b/hc-spring-lib/pom.xml
@@ -12,6 +12,7 @@
     <java.version>17</java.version>
     <lombok.version>1.18.36</lombok.version>
     <spring.boot.version>3.3.5</spring.boot.version>
+    <spring.jose.version>6.4.2</spring.jose.version>
     <jsonwebtoken.version>0.12.6</jsonwebtoken.version>
     <jupiter.version>5.11.4</jupiter.version>
     <github.repository_owner>esasiela</github.repository_owner>
@@ -42,6 +43,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
       <version>${spring.boot.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-jose</artifactId>
+      <version>${spring.jose.version}</version>
     </dependency>
 
     <dependency>
@@ -169,7 +176,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <compilerArgs>-parameters</compilerArgs>
+          <compilerArgs>
+            <arg>-parameters</arg>
+          </compilerArgs>
           <source>${java.version}</source>
           <target>${java.version}</target>
 
